--- a/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po'i snying po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryagaṇapatihṛdaya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa tshogs kyi bdag po'i snying po/</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
-                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
-                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <author role="translatorMain" xml:id="UT22084-091-062-1"/>
+                <consultant role="projectManager" xml:id="UT22084-091-062-2">Andreas Doctor</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-062-3">Adam Krug</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-062-4">Chokyi Nyima Rinpoche</consultant>
+                <editor role="reviser" xml:id="UT22084-091-062-5">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-062-6">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-062-7">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2019</date>
+                <edition>v 0.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-062"/>
                 <date/>
             </publicationStmt>
@@ -46,25 +47,66 @@
                     <idno source-id="O1JC114941JC12848" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-18T11:44:54.874Z" user="admin">18/07/2023 11:44:54</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:05:20.372Z" user="john">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:05:20.372Z" user="john">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2021-05-10T08:22:13.213Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2021-05-10T08:22:28.94Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T12:30:22.36Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T12:31:05.6Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-24T12:46:36.204Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-24T12:46:36.204Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:01:09.403Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:01:09.403Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:01:43.75Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:44:50.598Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:44:50.598Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-12-13T10:05:20.372Z" type="text-version" status="v 0.1.0" xml:id="UT22084-091-062-8">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#john" when="2019-12-13T10:05:20.372Z" type="translation-status" status="3" xml:id="UT22084-091-062-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T08:21:21.912Z" type="translation-status" status="2.h" xml:id="UT22084-091-062-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T08:21:21.912Z" type="text-version" status="0.1.1" xml:id="UT22084-091-062-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T08:22:13.213Z" type="text-version" status="0.1.2" xml:id="UT22084-091-062-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-10T08:22:28.94Z" type="text-version" status="0.1.3" xml:id="UT22084-091-062-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T12:30:22.36Z" type="translation-status" status="2.g" xml:id="UT22084-091-062-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T12:30:22.36Z" type="text-version" status="0.1.4" xml:id="UT22084-091-062-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T12:31:05.6Z" type="text-version" status="0.1.5" xml:id="UT22084-091-062-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T12:46:36.204Z" type="translation-status" status="2.f" xml:id="UT22084-091-062-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T12:46:36.204Z" type="text-version" status="0.1.6" xml:id="UT22084-091-062-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:01:09.403Z" type="translation-status" status="2.e" xml:id="UT22084-091-062-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:01:09.403Z" type="text-version" status="0.1.7" xml:id="UT22084-091-062-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:01:43.75Z" type="text-version" status="0.1.8" xml:id="UT22084-091-062-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:44:50.598Z" type="translation-status" status="2.d" xml:id="UT22084-091-062-22">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:44:50.598Z" type="text-version" status="0.1.9" xml:id="UT22084-091-062-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.10" xml:id="UT22084-091-062-24">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:52:53.344Z" type="translation-status" status="2.c" xml:id="UT22084-091-062-25">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:52:53.344Z" type="text-version" status="0.1.11" xml:id="UT22084-091-062-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
