--- a/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
@@ -9,19 +9,20 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshogs bdag kyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāgaṇapatitantranāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po chen po'i rgyud/</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
-                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
-                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <author role="translatorMain" xml:id="UT22084-091-063-1"/>
+                <consultant role="projectManager" xml:id="UT22084-091-063-2">Andreas Doctor</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-063-3">Adam Krug</author>
+                <editor role="reviser" xml:id="UT22084-091-063-4">Ryan Conlon</editor>
+                <editor role="associateEditor" xml:id="UT22084-091-063-5">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-063-6">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.6 <date>2019</date>
+                <edition>v 0.1.8 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-063"/>
                 <date/>
             </publicationStmt>
@@ -36,21 +37,54 @@
                     <idno source-id="O1JC114941JC12401" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-18T11:45:53.591Z" user="admin">18/07/2023 11:45:53</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:06:14.363Z" user="john">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:06:14.363Z" user="john">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:02:10.243Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2023-06-19T11:02:10.243Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2023-06-19T11:03:23.307Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2023-06-19T11:03:46.147Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:45:49.3Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.1.6" date-time="2023-07-18T11:45:49.3Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-12-13T10:06:14.363Z" type="text-version" status="v 0.1.0" xml:id="UT22084-091-063-7">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#john" when="2019-12-13T10:06:14.363Z" type="translation-status" status="3" xml:id="UT22084-091-063-8">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-08T14:16:19.71Z" type="translation-status" status="2.h" xml:id="UT22084-091-063-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-08T14:16:19.71Z" type="text-version" status="0.1.1" xml:id="UT22084-091-063-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T12:57:40.229Z" type="translation-status" status="2.f" xml:id="UT22084-091-063-11">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T12:57:40.229Z" type="text-version" status="0.1.2" xml:id="UT22084-091-063-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:02:10.243Z" type="translation-status" status="2.e" xml:id="UT22084-091-063-13">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:02:10.243Z" type="text-version" status="0.1.3" xml:id="UT22084-091-063-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:03:23.307Z" type="text-version" status="0.1.4" xml:id="UT22084-091-063-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:03:46.147Z" type="text-version" status="0.1.5" xml:id="UT22084-091-063-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:45:49.3Z" type="translation-status" status="2.d" xml:id="UT22084-091-063-17">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:45:49.3Z" type="text-version" status="0.1.6" xml:id="UT22084-091-063-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.7" xml:id="UT22084-091-063-19">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:53:48.987Z" type="translation-status" status="2.c" xml:id="UT22084-091-063-20">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:53:48.987Z" type="text-version" status="0.1.8" xml:id="UT22084-091-063-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
