--- a/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-064_toh667-the_tantra_of_mahakala.xml
@@ -9,20 +9,21 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">nag po chen pa'i rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">śrīmahākālatantra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal nag po chen pa'i rgyud/</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
-                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <author role="translatorMain" xml:id="UT22084-091-064-1"/>
+                <consultant role="projectManager" xml:id="UT22084-091-064-2">Andreas Doctor</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-064-3">Adam Krug</author>
+                <editor role="reviser" xml:id="UT22084-091-064-4">Ryan Conlon</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-064-5">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" xml:id="UT22084-091-064-6">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-064-7">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.9 <date>2019</date>
+                <edition>v 0.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.d">
+            <publicationStmt>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-064"/>
                 <date/>
             </publicationStmt>
@@ -37,25 +38,66 @@
                     <idno source-id="O1JC114941JC12402" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-18T11:46:48.721Z" user="admin">18/07/2023 11:46:48</note>
-                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:02.613Z" user="john">v 0.1.0</note>
-                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:02.613Z" user="john">3</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:12:31.727Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.2" date-time="2022-08-08T14:13:39.003Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.1.3" date-time="2022-08-08T14:14:07.378Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-29T14:32:42.971Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.1.4" date-time="2023-03-29T14:32:42.971Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.5" date-time="2023-03-29T14:33:15.674Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-17T09:37:31.039Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:37:31.039Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:05:36.942Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:05:36.942Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:07:14.56Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:46:44.438Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:46:44.438Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2019-12-13T10:07:02.613Z" type="text-version" status="v 0.1.0" xml:id="UT22084-091-064-8">
+                    <desc>v 0.1.0</desc>
+                </change>
+                <change who="#john" when="2019-12-13T10:07:02.613Z" type="translation-status" status="3" xml:id="UT22084-091-064-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-08T14:12:31.727Z" type="translation-status" status="2.h" xml:id="UT22084-091-064-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-08T14:12:31.727Z" type="text-version" status="0.1.1" xml:id="UT22084-091-064-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-08T14:13:39.003Z" type="text-version" status="0.1.2" xml:id="UT22084-091-064-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-08-08T14:14:07.378Z" type="text-version" status="0.1.3" xml:id="UT22084-091-064-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T14:32:42.971Z" type="translation-status" status="2.g" xml:id="UT22084-091-064-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T14:32:42.971Z" type="text-version" status="0.1.4" xml:id="UT22084-091-064-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-29T14:33:15.674Z" type="text-version" status="0.1.5" xml:id="UT22084-091-064-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T09:37:31.039Z" type="translation-status" status="2.f" xml:id="UT22084-091-064-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T09:37:31.039Z" type="text-version" status="0.1.6" xml:id="UT22084-091-064-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:05:36.942Z" type="translation-status" status="2.e" xml:id="UT22084-091-064-19">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:05:36.942Z" type="text-version" status="0.1.7" xml:id="UT22084-091-064-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-19T11:07:14.56Z" type="text-version" status="0.1.8" xml:id="UT22084-091-064-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:46:44.438Z" type="translation-status" status="2.d" xml:id="UT22084-091-064-22">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-18T11:46:44.438Z" type="text-version" status="0.1.9" xml:id="UT22084-091-064-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.10" xml:id="UT22084-091-064-24">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:54:44.095Z" type="translation-status" status="2.c" xml:id="UT22084-091-064-25">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T13:54:44.095Z" type="text-version" status="0.1.11" xml:id="UT22084-091-064-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
